# VesselManoeuvringModels

./: .buildinfo  .gitignore  00.01_intro.html  00.02_intro_example.html  01.01_manoeuvring_simulation.html  02.01_manoeuvring_PIT.html  10.03_OLS_covariance.html  10.04_bias_variance.html  15.39_KF_nomoto.html  15.40_EKF_nomoto.html  30.01_maximum_likelihood.html  Makefile  README.md  bibligraphy.html  chapter.html  genindex.html  index.html  intro.html  kalman_filters.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  requirements_build.txt  search.html  searchindex.js  setup.py
_sources/: 00.01_intro.ipynb  00.01_intro.md  00.02_intro_example.ipynb  01.01_manoeuvring_simulation.ipynb  02.01_manoeuvring_PIT.ipynb  10.03_OLS_covariance.ipynb  10.04_bias_variance.ipynb  15.39_KF_nomoto.ipynb  15.40_EKF_nomoto.ipynb  30.01_maximum_likelihood.ipynb  chapter.ipynb  kalman_filters.md
binder/: apt.txt  environment.yml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 01.00_MDL_select_runs.ipynb  02.00_MDL_load_runs.ipynb  03.00_test_overview.ipynb  04.01_PIT_nomoto.ipynb  04.02_PIT_linear_VMM.ipynb  04.02_PIT_nomotos.ipynb  04.02_PIT_nonlinear_VMM.ipynb  04.03_PIT_VCT_linear_VMM.ipynb  04.03_PIT_VCT_nonlinear_VMM.ipynb  04.03_PIT_linear_VMM.ipynb  05.01_acceleration_Kalman.ipynb  05.02_transform_to_ship.ipynb  05.03_cutting.ipynb  05.semiempirical_rudder_wpcc.ipynb  06.01_linear_VMM.ipynb  06.01_linear_simplified_VMM.ipynb  06.02_linear_VMM_wPCC_brix.ipynb  07.01_static_forces_from_model test.ipynb  08_01_PIT_summary.ipynb  (+68 more)
(+251 files in other folders)
