[project]
authors = [
  {name = 'Martin Alexandersson', email = "maralex@chalmers.se"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "System identification of ship manoeuvring models"
name = "vessel_manoeuvring_models"
readme = "README.md"
requires-python = ">=3.7"
version = "0.0.15"

[project.urls]
"Bug Tracker" = "https://github.com/martinlarsalbert/VesselManoeuvringModels/issues"
"Homepage" = "https://github.com/martinlarsalbert/VesselManoeuvringModels"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  'numpy',
  'pandas',
  'matplotlib',
  'scikit-learn',
  'seaborn',
  'scipy',
  'sympy',
  'statsmodels',
  'dill',
]
